--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -49,6 +49,8 @@
   flex: 1;
 }
 
+// The searchbox at the top of the document
+// This is used to provide an easy way to jump to new items
 .app-body .app-searchbox {
   height: 64px;
   border-bottom: 3px solid $gray-lighter;
@@ -111,6 +113,24 @@
 
         &:hover { color: $red; }
       }
+    }
+  }
+
+  // add new search box
+  // for adding things to the list
+  .add-new-search-box {
+    display: flex;
+    width: 100%;
+
+    // By default, show the select box
+    .Select { flex: 1; }
+
+    // When the select has an item selected, instead show the the quantity box
+    .Select.item-is-selected {
+      display: none;
+    }
+    .Select.item-is-selected + input[type=text] {
+      flex: 1;
     }
   }
 }
