--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -10,6 +10,7 @@
   right: 0px;
 
   font-family: 'Source Sans Pro', Helvetica, sans-serif;
+  color: $text-color;
 }
 
 .app-container {
@@ -21,7 +22,7 @@
 .app-sidebar {
   width: 300px;
   height: 100%;
-  background-color: $gray-lighter;
+  background-color: #FFF;
   border-right: 1px solid $gray-lighter;
   overflow-y: auto;
 
@@ -32,15 +33,40 @@
 
     li {
       background-color: #FFF;
-      padding: 20px 10px;
-      border-bottom: 1px solid $gray-lighter;
       cursor: pointer;
-      border-left: 5px solid transparent;
+      display: flex;
 
-      &:hover { background-color: lighten($selected, 5%); }
-      &.active { background-color: $selected; }
-      &.is-item { border-left-color: $yellow; }
-      &.is-recipe { border-left-color: $blue; }
+      border-radius: $border-radius;
+      margin: 8px;
+      padding: 24px 16px;
+
+      img {
+        border-radius: $border-radius;
+      }
+
+      // The text to the right of the image
+      .text-container {
+        flex: 1;
+        margin-left: 12px;
+
+        // The item name
+        h4 {
+          font-weight: bold;
+          font-size: 1.2rem;
+          margin-top: 0px;
+          margin-bottom: 0.75em;
+          white-space: nowrap;
+        }
+
+        // The subtext for the item
+        span {
+          font-size: 1rem;
+        }
+      }
+
+      &.active { background-color: $gray-lighter; }
+      // &.is-item { border-left-color: $yellow; }
+      // &.is-recipe { border-left-color: $blue; }
     }
   }
 }
