--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,4 @@
+// Color
 $blue: #00aad4;
 $yellow: #ebd86b;
 $orange: #ff9955;
@@ -8,8 +9,14 @@ $purple: #ba5ce2;
 $selected: #dcf9ff;
 
 $gray-base: #000;
+$gray-lightest: lighten($gray-base, 96%);
 $gray-lighter: lighten($gray-base, 93.5%);
 $gray-light: lighten($gray-base, 46.7%);
 $gray: lighten($gray-base, 33.5%);
 $gray-dark: lighten($gray-base, 20%);
 $gray-darker: lighten($gray-base, 13.5%);
+
+$text-color: $gray;
+
+// Radius
+$border-radius: 4px;
