code: navbar styles and a new logo!

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -109,10 +109,34 @@
 .app-navbar {
   ul {
     padding-left: 0px;
+    margin-bottom: 0px;
     list-style-type: none;
+
     li {
       display: inline-block;
       margin: 0em 1em;
+
+      // Each item has a link that has an inactive and active style
+      a {
+        color: $text-color;
+        text-decoration: none;
+      }
+
+      &.active a {
+        color: $blue;
+      }
+
+      // the first item with the logo and app name
+      &.nav-brand {
+        span {
+          margin-left: 0.3em;
+        }
+        img {
+          margin-top: -1em;
+          height: 3.2em;
+          float: left;
+        }
+      }
     }
   }
 }
