code: refactor stylesheets

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -25,6 +25,11 @@
   }
 }
 
+@import "sidebar";
+@import "navbar";
+@import "detail";
+@import "add-new-item";
+
 // The root component needs to be mounted in as large a component as possible.
 #root {
   position: absolute;
@@ -47,119 +52,9 @@
   display: flex;
 }
 
-.app-sidebar {
-  width: 100%;
-  height: 100%;
-  background-color: #FFF;
-  border-right: 1px solid $gray-lighter;
-  overflow-y: auto;
-
-  // when an item is selected, hide the sidebar on mobile
-  &.has-item-selected {
-    display: none;
-  }
-
-  @media (min-width: $mobile-breakpoint) {
-    // turn it into a sidebar on desktop
-    width: 360px;
-
-    // undo the above mobile-only style
-    &.has-item-selected {
-      display: block;
-    }
-  }
-
-  ul {
-    margin-top: 0px;
-    padding-left: 0px;
-    list-style-type: none;
-
-    li {
-      background-color: #FFF;
-      cursor: pointer;
-      display: flex;
-
-      border-radius: $border-radius;
-      margin: 8px;
-      padding: 24px 16px;
-
-      img {
-        border-radius: 50%;
-        width: $image-size;
-      }
-
-      // The text to the right of the image
-      .text-container {
-        flex: 1;
-        margin-left: 12px;
-
-        // The item name
-        h4 {
-          font-weight: bold;
-          font-size: 1.2rem;
-          margin-top: 0px;
-          margin-bottom: 0.75em;
-
-          white-space: nowrap;
-          overflow: hidden;
-          width: 70%; // FIXME: a bad idea. Changing widths will change the overflow point.
-          text-overflow: ellipsis;
-        }
-
-        // The subtext for the item
-        span {
-          font-size: 1rem;
-        }
-      }
-
-      &.active { background-color: $gray-lighter; }
-      // &.is-item { border-left-color: $yellow; }
-      // &.is-recipe { border-left-color: $blue; }
-    }
-  }
-}
-
 .app-body {
   flex: 1;
   overflow-y: auto;
-}
-
-// The navbar. This is at the top of the page to permit navigation from the top
-// of the page.
-.app-navbar {
-  border-bottom: 1px solid $gray-lighter;
-  ul {
-    padding-left: 0px;
-    margin-bottom: 0px;
-    list-style-type: none;
-
-    li {
-      display: inline-block;
-      margin: 0em 1em;
-
-      // Each item has a link that has an inactive and active style
-      a {
-        color: $text-color;
-        text-decoration: none;
-      }
-
-      &.active a {
-        color: $blue;
-      }
-
-      // the first item with the logo and app name
-      &.nav-brand {
-        span {
-          margin-left: 0.3em;
-        }
-        img {
-          margin-top: -1em;
-          height: 3.2em;
-          float: left;
-        }
-      }
-    }
-  }
 }
 
 // The searchbox at the top of the document
@@ -190,187 +85,6 @@
 
     border: 0;
     padding: 20px 10px;
-  }
-}
-
-// The right aligned detail view
-.app-detail {
-  // The left-aligned circle-image
-  img {
-    width: $image-size;
-    float: left;
-    margin-right: 20px;
-    border-radius: 50%;
-    margin-left: 20px;
-  }
-  
-  h1 {
-    line-height: $image-size;
-  }
-
-  // items within a list displayed in the detail view
-  & > ul {
-    padding-left: 0px;
-    list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    // no spacing between the bottom of the list and the add new item box
-    margin-bottom: 0px;
-
-    li {
-      flex: 1;
-      line-height: 2em;
-      display: flex;
-      border-bottom: 1px solid $gray-lighter;
-      padding: 0.5em 0.5em 0.5em 20px;
-
-      &.header {
-        background-color: $gray-lighter;
-      }
-
-      .item-name {
-        flex: 2;
-      }
-      .item-quantity {
-        flex: 1;
-      }
-      .item-close {
-        margin-right: 24px;
-        cursor: pointer;
-        font-size: 2em;
-        min-width: 0.75em; // align the header titles
-
-        &:hover { color: $red; }
-      }
-    }
-  }
-
-  // add new search box
-  // for adding things to the list
-  .add-new-search-box {
-    display: flex;
-    width: 100%;
-
-    .Select, .Select.item-is-selected + input[type=text] {
-      @include custom-font;
-      flex: 1;
-      padding: 0.5em 20px 0px 24px;
-      border: 0px;
-      border-bottom: 1px solid $gray-lighter;
-    }
-
-    // The box used to select the type of item to add.
-    // By default, show the select box
-    .Select {
-      .Select-control {
-        border: 0px;
-        padding-bottom: 0.5em;
-        .Select-placeholder, .Select-input {
-          padding-left: 0px;
-          line-height: 36px;
-        }
-      }
-    }
-
-    // When the select has an item selected, instead show the the quantity box
-    .Select.item-is-selected { display: none; }
-    .Select.item-is-selected + input[type=text] {
-      padding-bottom: 0.5em;
-      line-height: 36px;
-    }
-  }
-
-  // Custom quantity
-  .custom-quantity {
-    display: flex;
-
-    ul {
-      list-style-type: none;
-      padding-left: 1em;
-      width: 10em;
-
-      li {
-        margin: 0.25em 0em;
-
-        label {
-          margin-left: 0.5em;
-        }
-
-        input[type=radio] {
-          background-color: $gray-light;
-        }
-      }
-    }
-
-    .custom-quantity-tags {
-      .ReactTags__tag {
-        line-height: 1em;
-      }
-    }
-  }
-
-  // Image dropzine. Used to 
-  $dropzone-height: 150px;
-  .image-dropzone {
-    height: $dropzone-height;
-    border-width: 2px;
-    color: $gray-lighter;
-    border-color: $gray-lighter;
-    border-style: dashed;
-    border-radius: $border-radius;
-    cursor: pointer;
-
-    margin-top: 24px;
-    margin-left: 20px;
-    padding: 10px;
-
-    text-align: center;
-    line-height: $dropzone-height;
-    font-size: 2em;
-    width: calc(100% - 68px);
-
-    &.reject {
-      border-style: solid;
-      background-color: #ffdddd;
-    }
-    &.active {
-      border-style: solid;
-      background-color: #eee;
-    }
-  }
-}
-
-// The add new item or list page.
-.app-add-new-item {
-  width: 100%;
-
-  display: flex;
-  flex-direction: column;
-
-  h1 {
-    margin-left: 20px;
-  }
-  
-  input[type=text] {
-    margin-left: 20px;
-    margin-right: 20px;
-    background: #FFF;
-    border: 2px solid $text-color;
-    border-radius: $border-radius;
-    padding: 1em;
-    color: $text-color;
-  }
-
-  .button-group {
-    margin-top: 20px;
-    margin-left: 20px;
-    button.item {
-      @include button($red, #FFF);
-      margin-right: 20px; // put spacing between the two buttons
-    }
-    button.list {
-      @include button($blue, #FFF);
-    }
   }
 }
 
