--- a/src/styles/_detail.scss
+++ b/src/styles/_detail.scss
@@ -47,6 +47,7 @@
       }
       .item-quantity {
         flex: 1;
+        margin-right: 0.5em;
       }
       .item-close {
         margin-right: 24px;
