code: add sammy the sammich welcome

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -125,3 +125,13 @@
     }
   }
 }
+
+.app-sammy {
+  text-align: center;
+
+  p {
+    margin: 1em auto;
+    width: 500px;
+    font-size: 1.4em;
+  }
+}
